--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -20,7 +20,8 @@
     "@supabase/supabase-js": "^2.80.0",
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
-    "luxon": "^3.7.2"
+    "luxon": "^3.7.2",
+    "resend": "^6.4.2"
   },
   "devDependencies": {
     "@types/luxon": "^3.7.1",
